--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -108,6 +108,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Immo Heikkinen
 * James Reeves
 * Jarkko Oranen
+* Jarrod Taylor
 * Jason Wolfe
 * Jason Whitlark
 * Jean Niklas L'orange
@@ -163,6 +164,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Ragnar Dahlén
 * Ralf Schmitt
 * Rasmus Svensson
+* Ray McDermott
 * Rich Hickey
 * Richard Newman
 * Robert Lachlan
