--- a/content/news/2024/08/28/clojure-1-12-0-rc2.adoc
+++ b/content/news/2024/08/28/clojure-1-12-0-rc2.adoc
@@ -11,3 +11,9 @@ Changes since 1.12.0-rc1:
 * https://clojure.atlassian.net/browse/CLJ-2881[CLJ-2881] `definterface` - add support for array class type hints
 
 For a complete list of 1.12.0 features and fixes, see the https://github.com/clojure/clojure/blob/master/changes.md#changes-to-clojure-in-version-1120[official changelog].
+
+You can try this release in a REPL using the Clojure CLI:
+
+```
+clj -Sdeps '{:deps {org.clojure/clojure {:mvn/version "1.12.0-rc2"}}}'
+```
