--- a/content/news/2024/08/03/clojure-1-12-0-rc1.adoc
+++ b/content/news/2024/08/03/clojure-1-12-0-rc1.adoc
@@ -3,7 +3,9 @@ Alex Miller
 2024-08-03
 :jbake-type: post
 
-Clojure 1.12.0-rc1 is now available! At this point we consider Clojure 1.12.0 to be complete. Please test this release and provide any feedback prior to release.
+Clojure 1.12.0-rc1 is now available! Find download and usage information on the <<xref/../../../../../releases/downloads#dev,Downloads>> page.
+
+At this point we consider Clojure 1.12.0 to be complete. Please test this release and provide any feedback prior to release.
 
 The changes in this release since 1.12.0-beta2 are the same fixes also released in <<clojure-1-11-4#,Clojure 1.11.4>>, see there for details.
 
