--- a/content/reference/reader.adoc
+++ b/content/reference/reader.adoc
@@ -141,14 +141,12 @@ Metadata is a map associated with some kinds of objects: Symbols, Lists, Vector,
 `^{:a 1 :b 2} [1 2 3]` yields the vector `[1 2 3]` with a metadata map of `{:a 1 :b 2}`. +
 
 A shorthand version allows the metadata to be a simple symbol or string, in which case it is treated as a single entry map with a key of `:tag` and a value of the (resolved) symbol or string, e.g.: +
-`^String x` is the same as `^{:tag java.lang.String} x` +
+`^String x` is the same as `^{:tag java.lang.String} x`.
 
-A shorthand version for type signatures allows the metadata to be a vector, in which case it is treated as a single entry map with a key of `:param-tags` and a value of the (resolved) type hints, a vector of `:tag` values or `_`, e.g.: `^[String long _]` is the same as `^{:param-tags [java.lang.String long _]}`.
-
-Such tags can be used to convey type information to the compiler. +
+A shorthand version for type signatures allows the metadata to be a vector, in which case it is treated as a single entry map with a key of `:param-tags` and a value of the (resolved) type hints, a vector of `:tag` values or `_`, e.g.: `^[String long _]` is the same as `^{:param-tags [java.lang.String long _]}`. See <<java_interop#paramtags,`:param-tags`>> on how param-tags are used.
 
 Another shorthand version allows the metadata to be a keyword, in which case it is treated as a single entry map with a key of the keyword and a value of true, e.g.: +
-`^:dynamic x` is the same as `^{:dynamic true} x` +
+`^:dynamic x` is the same as `^{:dynamic true} x`
 
 Metadata can be chained in which case they are merged from right to left.
 
