add patch contributor

--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -92,6 +92,7 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Erik Assum
 * Eugene Kostenko
 * Federico Brubacher
+* Frank Yin
 * Frantisek Sodomka
 * Gabriel Horner
 * Gary Fredericks
