--- a/content/releases/downloads.adoc
+++ b/content/releases/downloads.adoc
@@ -15,7 +15,7 @@ These tools allow you to start a REPL for interactive use, download Clojure libr
 ====
 
 [[stable]]
-== Stable Release: 1.11.4 (Aug 3, 2024)
+== Stable Release: 1.12.0 (Sep 5, 2024)
 
 Include the release in your project using the following coordinates:
 
@@ -23,24 +23,24 @@ deps.edn coordinate:
 
 [source,clojure]
 ----
-org.clojure/clojure {:mvn/version "1.11.4"}
+org.clojure/clojure {:mvn/version "1.12.0"}
 ----
 
 Leiningen dependency:
 
 [source,clojure]
 ----
-[org.clojure/clojure "1.11.4"]
+[org.clojure/clojure "1.12.0"]
 ----
 
 === Dependencies
 
-Clojure 1.11.4 depends on the following core libraries:
+Clojure 1.12.0 depends on the following core libraries:
 
- * `org.clojure/spec.alpha {:mvn/version "0.3.218"}` (https://repo1.maven.org/maven2/org/clojure/spec.alpha/0.3.218/spec.alpha-0.3.218.jar[jar])
- * `org.clojure/core.specs.alpha {:mvn/version "0.2.62"}` (https://repo1.maven.org/maven2/org/clojure/core.specs.alpha/0.2.62/core.specs.alpha-0.2.62.jar[jar])
+ * `org.clojure/spec.alpha {:mvn/version "0.5.238"}` (https://repo1.maven.org/maven2/org/clojure/spec.alpha/0.5.238/spec.alpha-0.5.238.jar[jar])
+ * `org.clojure/core.specs.alpha {:mvn/version "0.4.74"}` (https://repo1.maven.org/maven2/org/clojure/core.specs.alpha/0.4.74/core.specs.alpha-0.4.74.jar[jar])
 
-Including Clojure with a tool like `clj` or `Leiningen` will automatically include these libraries as transitive dependencies.
+Using Clojure with a tool like the Clojure CLI or Leiningen will automatically include these libraries as transitive dependencies.
 
 === Java compatibility
 
@@ -55,8 +55,9 @@ Clojure depends on Java and all Clojure code is compiled to Java 8 compatible by
 Read the https://github.com/clojure/clojure/blob/master/changes.md[Changelog] for detailed release information.
 
 [[dev]]
-== Development Release: 1.12.0-rc2 (Aug 28, 2024)
+== Development Release: none
 
+////
 Include the release in your project using the following coordinates:
 
 deps.edn coordinate:
@@ -79,6 +80,7 @@ Leiningen dependency:
 ** `org.clojure/spec.alpha {:mvn/version "0.5.238"}`
 ** `org.clojure/core.specs.alpha {:mvn/version "0.4.74"}`
 * Requirements: Java 8 or higher (recommended: Java 8, Java 11, Java 17, Java 21)
+////
 
 == Older Releases
 
@@ -86,7 +88,7 @@ Leiningen dependency:
 
 == Clojure Source
 
-Clojure source code is hosted at https://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.12.0-master-SNAPSHOT/[oss.sonatype.org].
+Clojure source code is hosted at https://github.com/clojure/clojure[github.com/clojure/clojure]. Builds of the very latest version of Clojure's master branch are available at https://oss.sonatype.org/content/repositories/snapshots/org/clojure/clojure/1.13.0-master-SNAPSHOT/[oss.sonatype.org].
 
 == Get Clojure
 
@@ -97,7 +99,7 @@ Specify the version of Clojure that you want in your deps.edn:
 [source,clojure]
 ----
 {:deps
- {org.clojure/clojure {:mvn/version "1.11.4"}}}
+ {org.clojure/clojure {:mvn/version "1.12.0"}}}
 ----
 
 === Via Leiningen
@@ -106,7 +108,7 @@ Modify the dependencies and repositories sections of your https://leiningen.org/
 [source,clojure]
 ----
 ; under dependencies, select the release of clojure that you want
-:dependencies [[org.clojure/clojure "1.11.4"]]
+:dependencies [[org.clojure/clojure "1.12.0"]]
 ----
 
 == Using Clojure SNAPSHOT releases
