--- a/content/news/2024/09/05/clojure-1-12-0.adoc
+++ b/content/news/2024/09/05/clojure-1-12-0.adoc
@@ -3,7 +3,7 @@ Alex Miller
 2024-09-05
 :jbake-type: post
 
-Clojure 1.12.0 is now available!  Find download and usage information on the <<xref/../../../../../releases/downloads#dev,Downloads>> page.
+Clojure 1.12.0 is now available!  Find download and usage information on the <<xref/../../../../../releases/downloads#stable,Downloads>> page.
 
 ## 1 Compatibility
 
