update dev to reference Nubank

--- a/content/dev/dev.adoc
+++ b/content/dev/dev.adoc
@@ -7,7 +7,7 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Clojure was created by Rich Hickey and is developed by a core team of developers at https://cognitect.com[Cognitect], which supports this work. The Clojure development team values a measured and thoughtful approach to language evolution with a strong emphasis on maintaining backward compatibility.
+Clojure was created by Rich Hickey and is developed by a core team of developers at https://international.nubank.com.br/[Nubank], which supports this work. The Clojure development team values a measured and thoughtful approach to language evolution with a strong emphasis on maintaining backward compatibility.
 
 == Becoming a Contributor
 
