update eclipse license links

--- a/README.adoc
+++ b/README.adoc
@@ -41,6 +41,6 @@ Generate the pages:
 
 ## Terms of Use
 
-Copyright © 2016-2022 Rich Hickey and contributors
+Copyright © Rich Hickey and contributors
 
-All documentation contained in this repository is licensed by Rich Hickey under the http://www.eclipse.org/legal/epl-v10.html[Eclipse Public License v1.0] unless otherwise noted. To submit a pull request or other contribution, you must sign the http://clojure.org/community/contributing[Clojure Contributor Agreement].
+All documentation contained in this repository is licensed by Rich Hickey under the https://www.eclipse.org/legal/epl/epl-v10.html[Eclipse Public License v1.0] unless otherwise noted. To submit a pull request or other contribution, you must sign the http://clojure.org/community/contributing[Clojure Contributor Agreement].
