--- a/content/community/contributing_site.adoc
+++ b/content/community/contributing_site.adoc
@@ -125,6 +125,6 @@ Thanks for your contributions!
 
 == Terms of Use
 
-Copyright © 2019 Rich Hickey and contributors
+Copyright © Rich Hickey and contributors
 
-All documentation contained in this repository is licensed by Rich Hickey under the http://www.eclipse.org/legal/epl-v10.html[Eclipse Public License v1.0] unless otherwise noted.
+All documentation contained in this repository is licensed by Rich Hickey under the https://www.eclipse.org/legal/epl/epl-v10.html[Eclipse Public License v1.0] unless otherwise noted.
