--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/mmclobrain-beta-500.jpg[Clojure Brain Teasers,link="https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/",width="130"]
+| https://pragprog.com/titles/mmclobrain/clojure-brain-teasers/[Clojure Brain Teasers] +
+by Alex Miller, Lorilyn Jordan Miller +
+Sep 18, 2024
+
 | image::https://images-na.ssl-images-amazon.com/images/I/617Sl1uORgL._SL160.jpg[Functional Design: Principles, Patterns, and Practices,link="https://a.co/d/b1NrzDU",width="130"]
 | https://a.co/d/b1NrzDU[Functional Design: Principles, Patterns, and Practices] +
 by Robert C. Martin +
