fix link markup

--- a/content/news/2024/10/03/deref.adoc
+++ b/content/news/2024/10/03/deref.adoc
@@ -15,7 +15,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 == Blogs, articles, and projects
 
 * https://andersmurphy.com/2024/09/26/how-to-max-throughput-when-pulling-data-from-a-third-party-service.html[How to max throughput when pulling data from a third party service] - Anders Murphy
-* https://blog.agical.se/en/posts/the-programming-language-doesn-x-t-matter--until-it-does/[The programming language doesn't matter, until it does] - Peter Strömberg
+* link:++https://blog.agical.se/en/posts/the-programming-language-doesn-x-t-matter--until-it-does/++[The programming language doesn't matter, until it does] - Peter Strömberg
 * https://www.ooloi.org/home/from-clos-to-closure-in-clojure[From CLOS to closure in Clojure] - Peter Bengtson
 * https://github.com/m3tti/m3tti.github.io/blob/master/borkweb-babashkas-first-webframework.md[Babashka's First Web Framework] - Mathäus Sander
 * https://github.com/m3tti/m3tti.github.io/blob/master/on-building-a-blog-in-borkweb.md[Building a Blog in Borkweb] - Mathäus Sander
