add page description to weird characters guide

--- a/content/guides/weird_characters.adoc
+++ b/content/guides/weird_characters.adoc
@@ -3,6 +3,7 @@ James Hughes
 2017-05-27
 :type: guides
 :toc: macro
+:description: A guide to weird characters you might encounter reading Clojure code and what they mean.
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
