--- a/content/news/2024/10/25/deref.adoc
+++ b/content/news/2024/10/25/deref.adoc
@@ -20,7 +20,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://code.thheller.com/blog/shadow-cljs/2024/10/18/fullstack-cljs-workflow-with-shadow-cljs.html[Fullstack Workflow with shadow-cljs] - Thomas Heller
 * https://blog.fogus.me/2024/08/19/on-method-values-part-1/[On method values, part 1] - Fogus
 * https://ryanmartin.me/articles/clojure-fly/[Fast Clojure Deployments with Fly.io] - Ryan Martin
-* https://www.ovistoica.com/blog/20241022T064828--uix-shadowcljs-revolutionizing-clojure-ssr-for-interactive-landing-pages__clojure_clojurescript_react_shadowcljs_uix[UIx + ShadowCLJS: Revolutionizing Clojure SSR for Interactive Landing Pages] - Ovi Stoica
+* link:++ https://www.ovistoica.com/blog/20241022T064828--uix-shadowcljs-revolutionizing-clojure-ssr-for-interactive-landing-pages__clojure_clojurescript_react_shadowcljs_uix++[UIx + ShadowCLJS: Revolutionizing Clojure SSR for Interactive Landing Pages] - Ovi Stoica
 * https://blog.phronemophobic.com/dewey-sql.html[Dewey SQL] - Adrian Smith
 
 == Libraries and Tools
